deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp

  labels:
    app: myapp
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: myapp
status:
  loadBalancer: {}
